Интерфейс финальный